--- a/ExodusEditor/imgui.ini
+++ b/ExodusEditor/imgui.ini
@@ -4,14 +4,22 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=659,142
-Size=550,680
+Pos=8,15
+Size=549,1061
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][FPS]
-Pos=47,29
-Size=339,48
+Pos=653,412
+Size=549,50
+Collapsed=0
+
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1920,1080
 Collapsed=0
 
 [Docking][Data]
+DockNode  ID=0x00000001 Pos=120,150 Size=549,1061
+DockSpace ID=0x3BC79352 Window=0x4647B76E Pos=112,154 Size=1920,1061 CentralNode=1
 
